--- a/src/MEGASync/gui/Resources_light.qrc
+++ b/src/MEGASync/gui/Resources_light.qrc
@@ -205,5 +205,7 @@
         <file alias="cross_button_primary">images/themed/light/cross_button_primary.svg</file>
         <file alias="MEGA_inverse">images/themed/light/MEGA_inverse.svg</file>
         <file alias="monitor_inverse">images/themed/light/monitor_inverse.svg</file>
+        <file alias="help-circle_inverse_accent_inverse">images/themed/light/help-circle_inverse_accent_inverse.svg</file>
+        <file alias="help-circle_inverse_accent">images/themed/light/help-circle_inverse_accent.svg</file>
     </qresource>
 </RCC>
