--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsTokens.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsTokens.css
@@ -524,13 +524,21 @@ background-color: transparent;
     WordWrapLabel
 */
 
-WordWrapLabel[type="secondary"]
+WordWrapLabel
 {
-color: #ff616366; /*colorToken.text-secondary*/
 /*By default, WordWrapLabel don´t have a background color*/
 background-color: transparent;
 }
 
+WordWrapLabel[type="primary"]
+{
+color: #ff303233; /*colorToken.text-primary*/
+}
+
+WordWrapLabel[type="secondary"]
+{
+color: #ff616366; /*colorToken.text-secondary*/
+}
 
 /*
     SwitchButton
