--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1316,5 +1316,6 @@
         <file alias="alert-circle">images/themed/common/alert-circle.svg</file>
         <file alias="alert-triangle">images/themed/common/Stalled Issues/Header/alert-triangle.svg</file>
         <file alias="help-circle">images/themed/common/help-circle.svg</file>
+        <file alias="arrows-up-down-circle">images/themed/theme-aware/arrows-up-down-circle.svg</file>
     </qresource>
 </RCC>
