--- a/src/MEGASync/stalled_issues/gui/ui/StalledIssuesDialog.ui
+++ b/src/MEGASync/stalled_issues/gui/ui/StalledIssuesDialog.ui
@@ -606,7 +606,7 @@ color: grey;
         <number>0</number>
        </property>
        <item row="0" column="0">
-        <widget class="QToolButton" name="toolButton">
+        <widget class="QToolButton" name="emptyIcon">
          <property name="text">
           <string notr="true">...</string>
          </property>
@@ -616,8 +616,8 @@ color: grey;
          </property>
          <property name="iconSize">
           <size>
-           <width>240</width>
-           <height>240</height>
+           <width>96</width>
+           <height>96</height>
           </size>
          </property>
         </widget>
