--- a/src/MEGASync/gui/ui/PSAwidget.ui
+++ b/src/MEGASync/gui/ui/PSAwidget.ui
@@ -30,7 +30,9 @@
 #wImage,
 #wMessage,
 #wButtons,
-#lDesc
+#lDesc,
+#bImage,
+#lTitle
 {
 background-color: #fffafafa; /*colorToken.surface-1*/
 }
@@ -363,15 +365,15 @@ border: none;
  </widget>
  <customwidgets>
   <customwidget>
+   <class>ApiImageLabel</class>
+   <extends>QLabel</extends>
+   <header>ApiImageLabel.h</header>
+  </customwidget>
+  <customwidget>
    <class>ElidedLabel</class>
    <extends>QFrame</extends>
    <header location="global">ElidedLabel.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>ApiImageLabel</class>
-   <extends>QLabel</extends>
-   <header>ApiImageLabel.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
