--- a/src/MEGASync/gui/Resources_dark.qrc
+++ b/src/MEGASync/gui/Resources_dark.qrc
@@ -166,5 +166,8 @@
         <file alias="atom.svg">images/themed/dark/atom.svg</file>
         <file alias="adial-speedometer.svg">images/themed/dark/radial-speedometer.svg</file>
         <file alias="radial-cloud.svg">images/themed/dark/radial-cloud.svg</file>
+        <file alias="Activity.gif">images/themed/dark/Activity.gif</file>
+        <file alias="Activity@2x.gif">images/themed/dark/Activity@2x.gif</file>
+        <file alias="Activity@3x.gif">images/themed/dark/Activity@3x.gif</file>
     </qresource>
 </RCC>
